2003-06-16  Jakub Jelinek  <jakub@redhat.com>

	* c-decl.c (finish_decl): Change _libfunc SYMBOL_REFs created in
	optabs.c when redirecting a builtin.

2003-06-24  Jakub Jelinek  <jakub@redhat.com>

	* builtins.c (expand_builtin_strcpy): Don't evaluate side-effects in
	src twice.

2003-06-23  Jakub Jelinek  <jakub@redhat.com>

	* config/i386/i386.c (ix86_asm_file_end): Call SUBTARGET_FILE_END
	even if pic_label_name[0] is 0.

2003-04-15  Ulrich Weigand  <uweigand@de.ibm.com>

	* unwind.inc (_Unwind_Backtrace): New function.
	* unwind.h (_Unwind_Backtrace): Declare it.
	* libgcc-std.ver (_Unwind_Backtrace): Export it.

2002-11-26  Andrew Haley  <aph@redhat.com>

	* unwind-sjlj.c (_Unwind_FindEnclosingFunction): Rename
	from_Unwind_Find_Enclosing_Function.
	* unwind-dw2.c (_Unwind_FindEnclosingFunction): Likewise.
	* config/ia64/unwind-ia64.c (_Unwind_FindEnclosingFunction): Likewise.
	* libgcc-std.ver (_Unwind_FindEnclosingFunction): Rename from
	_Unwind_Find_Enclosing_Function, export @@GCC_3.3.
	* unwind.h (_Unwind_FindEnclosingFunction): Add.

2002-11-25  Andrew Haley  <aph@redhat.com>

	* libgcc-std.ver (_Unwind_Find_Enclosing_Function): Add.
	* config/ia64/unwind-ia64.c (_Unwind_Find_Enclosing_Function): New.
	* unwind-sjlj.c (_Unwind_Find_Enclosing_Function): Likewise.
	* unwind-dw2.c (_Unwind_Find_Enclosing_Function): Likewise.

2003-06-10  Jakub Jelinek  <jakub@redhat.com>

	* gcc.c (default_compilers): Pass -D__EXCEPTIONS if -fexceptions
	was given for .c compilations.

2003-06-04  Richard Henderson  <rth@redhat.com>

	* c-common.c (handle_cleanup_attribute): New.
	(c_common_attributes): Add it.
	* c-decl.c (finish_decl): Honor the cleanup attribute.
	* doc/extend.texi (Variable Attributes): Document it.

	* unwind-c.c: New file.
	* Makefile.in (LIB2ADDEH): Add it.
	* config/t-darwin, config/t-linux, config/t-linux-gnulibc1,
	config/ia64/t-ia64: Likewise.

2003-05-11  Ulrich Weigand  <uweigand@de.ibm.com>
