@@ -1,3 +1,7 @@
+2003-07-08  Jakub Jelinek  <jakub@redhat.com>
+
+	* g++.dg/opt/strength-reduce.C: New test.
+
 2003-06-24  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.c-torture/execute/string-opt-17.c: New test.
